# Estacionamento

./: .env  .gitignore  main.py  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 0b307673f879_.py  d1711e0140b2_.py  d3f28b53195c_.py  d4f54d7c8f91_.py  eb12d7b3ebc2_.py  ecd546098a75_.py
api/schemas/: auth.py  designations.py  workers.py
api/v1/: router.py
api/v1/endpoints/: auth.py  designations.py  sectors.py  workers.py
core/: database.py  exceptions.py  security.py  settings.py
models/: designations.py  sectors.py  user.py  workers.py
repositories/: designations.py  sectors.py  workers.py
routers/: designations.py  rooter.py  sectors.py  workers.py
schemas/: designations.py  sector.py  workers.py
